<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">智能停车系统</string>
    <string name="no_result">抱歉，未能找到结果!</string>
    <string name="no_parking_lots">还没制定目的地!</string>

    <!--MainActivity-->
    <string name="search_parkingLot">搜索周边停车场</string>
    <string name="sys_no_login">系统未登录</string>
    <string name="exit">再按一次返回键退出程序</string>
    <string name="get_destination">获取目的地成功!</string>
    <string name="search">搜索目的地</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="traffic_on">实时路况已开启</string>
    <string name="traffic_off">实时路况已关闭</string>
    <string name="beijing">北京</string>
    <string name="parking_lots">停车场</string>
    <string name="park_info">停车场信息</string>
    <string name="sure_checkout">确定要注销吗?</string>
    <string name="sure_checkout_admin_mode">确定退出管理员模式吗?</string>
    <string name="checkout_success">注销成功!</string>
    <string name="please_user_choose">请您选择几个候选的停车场:</string>
    <string name="parking_lot_not_choose">还未选择三个停车场!</string>
    <string name="parking_lot_repeat">您已选择该停车场!</string>

    <!--SearchDestinationActivity-->
    <string name="search_button">搜索</string>

    <!--LoginActivity-->
    <string name="sys_login">系统登录</string>
    <string name="user_info">用户信息</string>
    <string name="reserve">预约车位</string>
    <string name="account">用户名:</string>
    <string name="account1">请输入用户名</string>
    <string name="pwd">密\t\t\t\t码:</string>
    <string name="pwd1">请输入密码</string>
    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890!@#$%^*</string>
    <string name="show_pwd">显示密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="change_pwd">更改密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="change_user_info">修改用户信息</string>
    <string name="save_user_info">保存用户信息</string>
    <string name="checkout">注销</string>
    <string name="empty">用户名或密码为空！</string>
    <string name="admin_mode">进入管理员模式</string>
    <string name="login_right">登录成功！</string>
    <string name="login_error">用户名或密码错误！</string>

    <!--ChangePasswordActivity-->
    <string name="change_password">修改密码</string>
    <string name="old_password">旧的密码:</string>
    <string name="old_password_hint">请输入旧的密码</string>
    <string name="new_password">新的密码:</string>
    <string name="new_password_hint">请输入新的密码</string>
    <string name="new_password_again">再次确认:</string>
    <string name="new_password_again_hint">再次确认新的密码</string>
    <string name="info_empty">不能有信息为空!</string>
    <string name="change_password_error">密码修改失败，请重新尝试！</string>
    <string name="change_password_success">密码修改成功！</string>
    <string name="old_password_error">旧的密码输入不正确!</string>
    <string name="new_can_not_same_as_old">新密码不能和旧密码重复!</string>
    <string name="no_exist_user">不存在该用户!</string>

    <!--RegisterActivity-->
    <string name="user_register">用户注册</string>
    <string name="phone_number1">请输入您的手机号</string>
    <string name="register_pwd">密\t\t\t\t\t\t\t码:</string>
    <string name="pwd_again">再次确认</string>
    <string name="pwd_again1">再次确认密码</string>
    <string name="email">电子邮箱:</string>
    <string name="email1">请输入电子邮箱</string>
    <string name="plateNo1">请输入车牌号</string>
    <string name="space">不能有信息为空！</string>
    <string name="account_check">用户名不能超过20位!</string>
    <string name="account_repeat">用户名已注册!</string>
    <string name="phone_number_check">手机号输入不合法!</string>
    <string name="phone_number_repeat">该手机号已注册!</string>
    <string name="pwd_check">密码长度不能小于6位!</string>
    <string name="pwd_not_the_same">两次输入的密码不一样！</string>
    <string name="email_check">邮箱输入不合法!</string>
    <string name="email_repeat">该邮箱已注册!</string>
    <string name="plateNo_check">车牌号输入不合法!</string>
    <string name="plateNo_repeat">该车牌号已注册!</string>
    <string name="register_right">注册成功！</string>
    <string name="register_error">注册失败！</string>

    <!--UserInfoActivity-->
    <string name="user_info_account">用\t\t户\t\t名:</string>
    <string name="user_info_phone_number">手\t\t机\t\t号:</string>
    <string name="user_info_plateNo">车\t\t牌\t\t号:</string>
    <string name="get_info_success">获取用户信息成功!</string>
    <string name="get_info_error">获取用户信息失败!</string>
    <string name="update_user_info_null">修改用户信息不能为空!</string>
    <string name="update_user_info_success">修改用户信息成功!</string>
    <string name="update_user_info_error">修改用户信息失败!</string>

    <!--ParkInfoActivity-->
    <string name="destination">用户目的地:</string>
    <string name="total_spaces">总共停车位:</string>
    <string name="total_available">空闲停车位:</string>
    <string name="park_price">日间停车费:</string>
    <string name="park_night_price">夜间停车费:</string>
    <string name="get_park_info_success">获取停车场信息成功!</string>
    <string name="get_park_info_error">获取停车场信息失败!</string>

    <!--AdminParkInfoActivity-->
    <string name="change_park_info">修改停车场信息</string>
    <string name="save_park_info">保存停车场信息</string>
    <string name="update_park_info_success">修改停车场信息成功!</string>
    <string name="update_park_info_error">修改停车场信息失败!</string>

    <!--ChooseActivity-->
    <string name="center">个人中心</string>
    <string name="disconnect">网络连接超时，请重试！</string>
    <string name="name_is_used">用户名已被使用！</string>

    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>

    <!--ReserveActivity-->
    <string name="parking_lot_name">停车场名称:</string>
    <string name="parking_lot_address">停车场地址:</string>
    <string name="destination1">请输入你的目的地</string>
    <string name="start_time">起\t 始\t 时\t 间:</string>
    <string name="start_time1">请输入你的起始时间</string>
    <string name="end_time">结\t 束\t 时\t 间:</string>
    <string name="end_time1">请输入你的结束时间</string>
    <string name="reserve_hour">时</string>
    <string name="reserve_minute">分</string>
    <string name="total_time">总\t\t\t\t计\t\t\t\t时:</string>
    <string name="start_time_hour_error">开始时间小时范围有误!</string>
    <string name="start_time_minute_error">开始时间分钟范围有误!</string>
    <string name="end_time_hour_error">结束时间小时范围有误!</string>
    <string name="end_time_minute_error">结束时间分钟范围有误!</string>
    <string name="reserve_space_success">预约成功！</string>
    <string name="reserve_space_error">您已预约!</string>
    <string name="reserve_space_not_allowed">无法获取停车场信息,所以不能预约!</string>
    <string name="reserve_time_error">预约时间有误！</string>
    <string name="reserve_time_null">预约时间为空！</string>
    <string name="create_order">创建预订订单</string>
    <string name="create_order_not_allowed">无法创建订单!</string>

    <!--UserChooseActivity-->
    <string name="user_choose">用户选择</string>
    <string name="respectful">尊敬的</string>
    <string name="hello">您好:</string>
    <string name="user_choose_reason">请按照您认为以下因素的重要性进行排序(1到3):</string>
    <string name="parking_free_rate">车位空闲率(可用车位/总共车位):</string>
    <string name="parking_free_rate1">车位空闲率:</string>
    <string name="distance">停车场到目的地的距离:</string>
    <string name="lightNum">路况交通情况:</string>
    <string name="input_time">请输入停车的时段:</string>
    <string name="input_number_repeat">填写的序号不能重复!</string>
    <string name="input_number_error">输入的数字之和不为10!</string>

    <!--BestChoiceActivity-->
    <string name="best_estimate">最佳预估</string>
    <string name="best_park">最佳停车点:</string>
    <string name="parking_lot_id">号停车场</string>

    <!--OrderActivity-->
    <string name="reserve_order_detail">预订车位订单详情</string>
    <string name="build_order">创建订单</string>
    <string name="park_free">预计停车费:</string>
    <string name="reserve_space">预约停车位</string>
    <string name="guide">开始导航</string>

    <!--RoutePlanningActivity-->
    <string name="drive_route">驾车路线</string>
    <string name="sure_arrive_destination">确定已到达目的地?</string>
    <string name="sure_arrive">已到达</string>
    <string name="sure_not_arrive">暂未到达</string>
    <string name="cancel_reserve">已超过预计时间10分钟,车位将不再为您预留!</string>
    <string name="reserve_again">您预定的车位已取消,你可以重新进行预订!</string>

    <!--TimingActivity-->
    <string name="park_timing">停车计时</string>
    <string name="stop_time">停止计时</string>
    <string name="sure_parking_over">确认停车结束吗?</string>
    <string name="timing">停车计时中</string>
    <string name="undo_reserve">已归还停车位</string>

    <!--SetparkingActivity-->
    <string name="set_parking_time">停车设置</string>
    <string name="get_total_available_error">获取停车空位失败</string>
    <string name="start_timing">开始计时</string>

    <!--PayingActivity-->
    <string name="paying">支付车费</string>
    <string name="parkFee">停车费用:</string>
    <string name="finish_paying">完成支付</string>

</resources>
