<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_account"
                    android:textSize="17sp"
                    android:gravity="center"/>
            <EditText
                    android:id="@+id/register_account_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account1"
                    android:selectAllOnFocus="true"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_phone_number"
                    android:textSize="17sp"
                    android:gravity="center"/>
            <EditText
                    android:id="@+id/register_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number1"
                    android:inputType="number"
                    android:selectAllOnFocus="true"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/register_pwd"
                    android:textSize="17sp"
                    android:gravity="center"/>
            <EditText
                    android:id="@+id/register_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd1"
                    android:selectAllOnFocus="true"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pwd_again"
                    android:textSize="17sp"
                    android:gravity="center"/>
            <EditText
                    android:id="@+id/register_password_again_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd_again1"
                    android:selectAllOnFocus="true"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="17sp"
                    android:gravity="center"/>
            <EditText
                    android:id="@+id/register_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email1"
                    android:selectAllOnFocus="true"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_plateNo"
                    android:textSize="17sp"
                    android:gravity="center"/>
            <EditText
                    android:id="@+id/register_plateNo_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plateNo1"
                    android:selectAllOnFocus="true"/>
        </TableRow>
    </TableLayout>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">

        <Button
                android:id="@+id/register_finish_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ffffff"
                android:background="#ff5500"
                android:textSize="25sp"
                android:text="@string/register"/>

    </RelativeLayout>

</LinearLayout>