<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
            android:id="@+id/change_password_account_relative_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center_vertical">

        <TextView
                android:id="@+id/change_password_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/user_info_account"
                android:textSize="17sp"
                android:textColor="#000"/>

        <EditText
                android:id="@+id/change_password_account_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dip"
                android:layout_toRightOf="@id/change_password_account_text_view"
                android:hint="@string/account1"/>
    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/change_password_old_pwd_relative_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_password_account_relative_layout"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center_vertical">

        <TextView
                android:id="@+id/change_password_old_pwd_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/old_password"
                android:textSize="17sp"
                android:textColor="#000"/>

        <EditText
                android:id="@+id/change_password_old_pwd_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dip"
                android:layout_toRightOf="@id/change_password_old_pwd_text_view"
                android:hint="@string/old_password_hint"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/change_password_new_pwd_relative_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_password_old_pwd_relative_layout"
            android:layout_marginTop="10dip"
            android:clickable="true"
            android:gravity="center_vertical">

        <TextView
                android:id="@+id/change_password_new_pwd_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/new_password"
                android:textColor="#000"
                android:textSize="17sp"/>

        <EditText
                android:id="@+id/change_password_new_pwd_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dip"
                android:layout_toRightOf="@id/change_password_new_pwd_text_view"
                android:hint="@string/new_password_hint"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/change_password_new_pwd_again_relative_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_password_new_pwd_relative_layout"
            android:layout_marginTop="10dip"
            android:clickable="true"
            android:gravity="center_vertical">

        <TextView
                android:id="@+id/change_password_new_pwd_again_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/new_password_again"
                android:textColor="#000"
                android:textSize="17sp"/>

        <EditText
                android:id="@+id/change_password_new_pwd_again_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dip"
                android:layout_toRightOf="@id/change_password_new_pwd_again_text_view"
                android:hint="@string/new_password_again_hint"/>
    </RelativeLayout>


    <Button
            android:id="@+id/change_password_change_pwd_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="#ffffff"
            android:background="#ff0000"
            android:textSize="25sp"
            android:layout_below="@+id/change_password_new_pwd_again_relative_layout"
            android:layout_marginTop="20dp"/>

</RelativeLayout>
