<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.realgodjj.parking_system.LoginActivity">


    <ImageView
            android:id="@+id/intelligent_image"
            android:layout_width="300sp"
            android:layout_height="200sp"
            android:layout_gravity="center"/>

    <RelativeLayout
            android:id="@+id/edit_relative_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:id="@+id/account_tab_relative_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:gravity="center_vertical">

            <TextView
                    android:id="@+id/account_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/account"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:textColor="#000"/>

            <EditText
                    android:id="@+id/account_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/account_text_view"
                    android:hint="@string/account1"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/password_tab_relative_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_tab_relative_layout"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical">

            <TextView
                    android:id="@+id/password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/pwd"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="17sp"/>

            <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/password_text_view"
                    android:hint="@string/pwd1"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/password_option_tab_relative_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:id="@+id/show_password_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7.5dip"
                android:layout_marginLeft="15dip"/>
        <TextView
                android:id="@+id/show_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_toRightOf="@id/show_password_check_box"
                android:text="@string/show_pwd"
                android:textColor="#ff4d00"  />
        <CheckBox
                android:id="@+id/remember_password_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/show_password_text_view"
                android:layout_marginTop="7.5dip"
                android:layout_marginLeft="15dip"/>
        <TextView
                android:id="@+id/remember_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_toRightOf="@id/remember_password_check_box"
                android:text="@string/remember_pwd"
                android:textColor="#0d11ff"  />
        <TextView
                android:id="@+id/change_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dip"
                android:text="@string/change_pwd"
                android:textColor="#29981A" />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/button_relative_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="#545bcb"
                android:textSize="25sp"
                android:textColor="#ffffff"/>

        <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:background="#ff5500"
                android:textSize="25sp"
                android:layout_below="@+id/login_button"
                android:layout_marginTop="20dp" />

    </RelativeLayout>

</LinearLayout>
