<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
            android:id="@+id/head_image"
            android:layout_width="300sp"
            android:layout_height="200sp"
            android:layout_gravity="center"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

            <TableRow>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info_account"
                        android:textSize="17sp"
                        android:textColor="#000"
                        android:gravity="center"/>
                <EditText
                        android:id="@+id/user_info_account_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ff0000"
                        android:gravity="center"
                        android:selectAllOnFocus="true"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info_phone_number"
                        android:textSize="17sp"
                        android:textColor="#000"
                        android:gravity="center"/>
                <EditText
                        android:id="@+id/user_info_phone_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ff0000"
                        android:gravity="center"
                        android:selectAllOnFocus="true"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="17sp"
                        android:textColor="#000"
                        android:gravity="center"/>
                <EditText
                        android:id="@+id/user_info_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ff0000"
                        android:gravity="center"
                        android:selectAllOnFocus="true"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info_plateNo"
                        android:textSize="17sp"
                        android:textColor="#000"
                        android:gravity="center"/>
                <EditText
                        android:id="@+id/user_info_plateNo_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ff0000"
                        android:gravity="center"
                        android:selectAllOnFocus="true"/>
            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/user_info_change_user_info_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_user_info"
                android:textColor="#ffffff"
                android:background="#fdd32a"
                android:textSize="25sp"
                android:layout_marginTop="20dp" />

        <Button
                android:id="@+id/user_info_save_user_info_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_user_info"
                android:layout_below="@id/user_info_change_user_info_button"
                android:textColor="#ffffff"
                android:background="#00e8fd"
                android:textSize="25sp"
                android:layout_marginTop="20dp" />

    </RelativeLayout>

</LinearLayout>